--- a/styles/style.css
+++ b/styles/style.css
@@ -206,5 +206,30 @@
     .about-items{
         flex-direction: column;
     }
-
+    .banner{
+        flex-direction: column;
+        margin: 20px;
+    }
+    .header{
+        background-image: none;
+    }
+    .banner-profile-pic {
+        width: 100%;
+    }
+    nav {
+        flex-direction: column;       
+    }
+    nav > ul{
+        flex-direction: column;
+        gap: 20px;
   }
+
+    .btn-primary{
+        /* display: flex; */
+        /* flex-direction: column; */
+        margin-top: 10px;
+        margin-bottom: 5px;
+        
+      
+    }
+}
